Fix compilation on java 8